fix sidebar component position and alignment

--- a/theme/sass/components/_blog-sidebar-component.scss
+++ b/theme/sass/components/_blog-sidebar-component.scss
@@ -1,7 +1,7 @@
-.blog-sidebar-component {
+.sidebar-container {
 
   @include breakpoint($md) {
-    width: 40%
+    width: 40%;
     float: right;
   }
   h2 {
